--- a/offsets_db_data/catalog.yaml
+++ b/offsets_db_data/catalog.yaml
@@ -1,3 +1,29 @@
+metadata:
+  description: https://carbonplan.org/research/offsets-db-explainer
+  TERMS_OF_DATA_ACCESS: |
+    # OffsetsDB
+
+    OffsetsDB, created by CarbonPlan (https://carbonplan.org) is a regularly-updated snapshot of carbon offset projects, credit issuances, and credit retirements published by the following carbon offset registries:
+
+    American Carbon Registry (ACR)
+    ART TREES (ART)
+    Climate Action Reserve (CAR)
+    Gold Standard (GLD)
+    Verra (VCS)
+
+    Carbon offset information has historically been scattered across multiple locations in formats that are not particularly useful to researchers. This database is meant to increase transparency, accountability, and reliability of the carbon offset market, and to provide researchers with a robust tool for visualizing, validating, and cross-checking offsets. We hope you find it useful!
+
+    ## Our Terms of Use Apply To OffsetsDB
+
+    By downloading, copying, or using this project, and/or any associated content or data, you agree to CarbonPlan’s Terms Of Use, which can be found here: https://carbonplan.org/terms. As further explained in the Terms of Use, CarbonPlan makes its projects — including OffsetsDB — available strictly on an “as-is” and “as-available” basis, without warranty of any kind, including without limitation the warranties of merchantability, fitness for a particular purpose, and noninfringement.
+
+    ## Intellectual Property Rights
+
+    Because OffsetsDB consists of purely factual information concerning carbon offsets that has been made publicly available by the above-referenced registries, CarbonPlan does not claim copyright in this data.
+
+    However, please note that CarbonPlan does not make any representation as to whether any of the above-referenced registries may claim any rights in the data they have published. If you have any questions or concerns about this, please reach out to the registries directly.
+
+  version: 1.0.0
 sources:
   credits:
     description: OffsetsDB processed and transformed data
@@ -24,118 +50,3 @@ sources:
       urlpath: 's3://carbonplan-offsets-db/final/{{ date }}/projects-augmented.parquet'
       storage_options: { 'anon': True }
       engine: 'fastparquet'
-
-  raw_projects:
-    description: Raw projects data downloaded from the registries on a daily basis
-    driver: csv
-    parameters:
-      registry:
-        description: registry name
-        type: str
-        default: verra
-        allowed:
-          - verra
-          - art-trees
-          - gold-standard
-          - american-carbon-registry
-          - climate-action-reserve
-
-      date:
-        description: date of the data to load
-        type: str
-        default: '2024-02-06'
-    args:
-      urlpath: 's3://carbonplan-offsets-db/raw/{{ date }}/{{ registry }}/projects.csv.gz'
-      storage_options: { 'anon': True }
-
-  raw_verra_transactions:
-    description: Raw Verra transactions data downloaded from the registries on a daily basis
-    driver: csv
-    parameters:
-      date:
-        description: date of the data to load
-        type: str
-        default: '2024-02-06'
-    args:
-      urlpath: 's3://carbonplan-offsets-db/raw/{{ date }}/verra/transactions.csv.gz'
-      storage_options: { 'anon': True }
-
-  raw_gold_standard_transactions:
-    description: Raw Gold Standard transactions data downloaded from the registries on a daily basis
-    driver: csv
-    parameters:
-      date:
-        description: date of the data to load
-        type: str
-        default: '2024-02-06'
-      transaction_type:
-        description: transaction type
-        type: str
-        default: 'issuances'
-        allowed:
-          - issuances
-          - retirements
-          - cancellations
-    args:
-      urlpath: 's3://carbonplan-offsets-db/raw/{{ date }}/gold-standard/{{ transaction_type }}.csv.gz'
-      storage_options: { 'anon': True }
-
-  raw_art_trees_transactions:
-    description: Raw Art Trees transactions data downloaded from the registries on a daily basis
-    driver: csv
-    parameters:
-      date:
-        description: date of the data to load
-        type: str
-        default: '2024-02-06'
-      transaction_type:
-        description: transaction type
-        type: str
-        default: 'issuances'
-        allowed:
-          - issuances
-          - retirements
-          - cancellations
-    args:
-      urlpath: 's3://carbonplan-offsets-db/raw/{{ date }}/art-trees/{{ transaction_type }}.csv.gz'
-      storage_options: { 'anon': True }
-
-  raw_american_carbon_registry_transactions:
-    description: Raw American Carbon Registry transactions data downloaded from the registries on a daily basis
-    driver: csv
-    parameters:
-      date:
-        description: date of the data to load
-        type: str
-        default: '2024-02-06'
-      transaction_type:
-        description: transaction type
-        type: str
-        default: 'issuances'
-        allowed:
-          - issuances
-          - retirements
-          - cancellations
-    args:
-      urlpath: 's3://carbonplan-offsets-db/raw/{{ date }}/american-carbon-registry/{{ transaction_type }}.csv.gz'
-      storage_options: { 'anon': True }
-
-  raw_climate_action_reserve_transactions:
-    description: Raw Climate Action Reserve transactions data downloaded from the registries on a daily basis
-    driver: csv
-    parameters:
-      date:
-        description: date of the data to load
-        type: str
-        default: '2024-02-06'
-      transaction_type:
-        description: transaction type
-        type: str
-        default: 'issuances'
-        allowed:
-          - issuances
-          - retirements
-          - cancellations
-    args:
-      urlpath: 's3://carbonplan-offsets-db/raw/{{ date }}/climate-action-reserve/{{ transaction_type }}.csv.gz'
-      storage_options: { 'anon': True }
