--- a/pyproject.toml
+++ b/pyproject.toml
@@ -90,6 +90,7 @@ exclude = [
     "site-packages",
     "venv",
 ]
+[tool.ruff.lint]
 per-file-ignores = {}
 ignore = [
     "E721", # Comparing types instead of isinstance
