Update protocol mapping

--- a/offsets_db_data/configs/all-protocol-mapping.json
+++ b/offsets_db_data/configs/all-protocol-mapping.json
@@ -54,7 +54,6 @@
       "ACM0002: “Grid-connected electricity generation from renewable sources”, Version 21.0",
       "ACM0002: “Grid-connected electricity generation from renewable sources” (Version 21.0);",
       "ACM0002: “Grid-connected electricity generation from renewable sources” (Version 21.0)",
-      "Applied methodologies (Shall be approved by the GCC or the CDM) ACM0002: “Grid-connected electricity generation from renewable sources” (Version 21.0)",
       "ACM0002.: Grid-connected electricity generation from renewable sources, Version 21.0 ",
       "ACM0002: \"Grid-connected electricity generation from renewable sources\",Version 21.0",
       "Approved CDM Methodology: Grid-connected electricity generation from Renewable sources, ACM0002, Version 21",
@@ -92,16 +91,11 @@
       "ACM0002, Version-21",
       "ACM0002 – Grid-connected electricity generation from renewable sources, version 21.0",
       "ACM0002 – Grid-connected electricity generation from renewable  sources, version 20.0'",
-      "GCCM001 Version 2.0 /ACM0002 Version 20.0",
-      "GCCM001 Version: v.4.0",
-      "GCCM001-v4.0",
-      "GCCM001 (Version 3.0) and ACM0002 (Version 20.0)",
       "Large-scale Consolidated Methodology for Grid-connected electricity generation from renewable sources (ACM0002 v20.0)",
       "CDM methodology ACM0002 “Grid-connected electricity generation from renewable sources” version 20.0",
       "CDM Approved ACM0002 Grid-connected electricity generation from renewable sources, version 20.0",
       "ACM 0002, Version 20",
       "CDM approved consolidated Methodology ACM0002, version 21.0",
-      "Applied methodologies (Shall be approved by the GCC or the CDM) ACM0002: “Grid-connected electricity generation from renewable sources” (Version 20.0)",
       "CDM approved consolidated Methodology ACM0002 (Version 20.0)",
       "Large Scale Consolidated Methodology ACM0002: Grid-connected electricity generation from renewable sources, version 20.0.",
       "CDM approved consolidated Methodology- ACM0002 (Version 20.0)",
@@ -329,8 +323,7 @@
       "ACM0018, Version - 5.0",
       "ACM0018 “Large-scale Consolidated Methodology: Electricity generation from biomass in power-only plants”, Version 5.0",
       "ACM0018",
-      "ACM0018 – Electricity generation from biomass in power-only plants version 06.0",
-      "GCCM003 v1.0 /ACM0018 ver 5.0"
+      "ACM0018 – Electricity generation from biomass in power-only plants version 06.0"
     ],
     "program": "cdm",
     "sub-category": "biomass"
@@ -1143,7 +1136,6 @@
       "AMS-III.AO.; AMS-III.AQ",
       "AM0073; AMS-III.AQ",
       "AMS-III.D.; AMS-III.AO.; AMS-III.AQ",
-      "GCCM003, AMS-III.AQ",
       "AMS-III.D - Version 21.0, AMS-III.AQ. - Version 2.0"
     ],
     "program": "cdm"
@@ -1766,91 +1758,6 @@
     ],
     "program": "acr",
     "sub-category": "industrial-gases"
-  },
-  "gccm0003": {
-    "category": "ghg-management",
-    "known-strings": [
-      "GCCM003: Methodology for Energy Generation from Animal Manure and Waste Management Projects v2.0",
-      "GCCM003-Methodology-for-Energy-Generation-from-Animal-Manure-and-Waste-Management-Projects-v1",
-      "GCCM003-Methodology-for-Energy-Generation-from-Animal-Manure-and-Waste-Management-Projects-v2.0",
-      "GCCM003 ver1.0",
-      "GCCM003, AMS-III.AQ",
-      "GCCM003 v1.0 /ACM0018 ver 5.0"
-    ],
-    "program": "gcc",
-    "sub-category": "livestock"
-  },
-  "gccm001": {
-    "category": "renewable-energy",
-    "known-strings": [
-      "GCC M001 Methodology for Renewable Energy Generation Projects Supplying Electricity to Grid or Captive Consumers, version 4.0",
-      "GCCM001 Methodology for Renewable Energy Generation Projects Supplying Electricity to Grid or Captive Consumers, Ver 04.0",
-      "GCCM001 Methodology for Renewable Energy Generation Projects Supplying Electricity to Grid or Captive Consumers, Version 4.0.",
-      "GCCM001- Grid Connected Renewable Energy Generation Projects (Version No. – V3.0)",
-      "GCCM001: Grid-connected electricity generation from renewable sources --- Version 3.0",
-      "GCCM001 V4.0 - 2022",
-      "GCCM001 v4.0",
-      "GCCM001 v4.0",
-      "GCCM001 Methodology for Renewable Energy Generation projects  supplying Electricity to Grid or Captive Consumers Version 3.0",
-      "GCCM001: Methodology for Renewable Energy Generation Projects Supplying Electricity to Grid",
-      "GCCM001 Methodology for Renewable Energy Generation projects  supplying Electricity to Grid or Captive Consumers Version 3.0",
-      "GCCM001: Methodology for Renewable Energy Generation Projects Supplying Electricity to Grid or Captive Consumers, version 4.0",
-      "GCCM001 Methodology for Renewable Energy Generation projects  supplying Electricity to Grid or Captive Consumers Version 3.0",
-      "GCCM001 Methodology for Renewable Energy Generation Projects Supplying Electricity to Grid or Captive Consumers, Ver 040",
-      "GCCM001 Version 3.0 /ACM0002 Version 20.0",
-      "GCCMOO1",
-      "GCCMOO1 v4.0",
-      "GCCM001 Methodology for Renewable Energy Generation Projects Supplying Electricity to Grid or Captive Consumers, version 4.0",
-      "GCC M001 Methodology for Renewable Energy Generation Projects Supplying Electricity to Grid or Captive Consumers, Version 4.0.",
-      "GCCM0001 Methodology for Renewable Energy Generation Projects Supplying Electricity to Grid or Captive Consumers--- Version 4.02",
-      "GCC M001 Methodology for Renewable Energy Generation Projects Supplying Electricity to Grid or Captive Consumers, version 3.0",
-      "GCC M001 Methodology for Renewable Energy Generation Projects Supplying Electricity to Grid or Captive Consumers, Version 3.0.",
-      "Energy Generation Projects Supplying Electricity to Grid or Captive Consumers (GCCM001 V3.0)",
-      "Renewable Energy Generation Projects Supplying Electricity to Grid or Captive Consumers (GCCM001 V3.0 – 2022)",
-      "Version 2.0 of GCCM001 “Methodology for Grid Connected Renewable Energy Generation Projects",
-      "Methodology for Grid Connected Renewable Energy Generation Projects (GCCM001 v2.0)",
-      "GCCM001 Methodology for Renewable Energy Generation Projects Supplying Electricity to Grid or Captive Consumers & version 3.0",
-      "GCCM001 v3",
-      "GCCM001: Methodology for Renewable Energy Generation Projects Supplying Electricity to Grid or Captive Consumers, version 3.0",
-      "GCCM001 V3.0 - 2022",
-      "GCCM001 “Methodology for Grid Connected Renewable Energy Generation Projects’,Version 2.0",
-      "GCCM001 Version 3.0",
-      "GCCM001 - Methodology for Renewable Energy Generation Projects Supplying Electricity to Grid or Captive Consumers, version 3.0",
-      "GCCM001 v2.0 - Methodology for Grid Connected Renewable Energy Generation Projects",
-      "GCCM001: Renewable Energy Generation Projects Supplying Electricity to Grid or Captive Consumers ; Version 3.0",
-      "GCCM001-Methodology for Renewable Energy Generation Projects Supplying Electricity to Grid or Captive Consumers (Version 3.0 - 2022)",
-      "GCCM001 v3.0",
-      "GCCM001 Methodology for Renewable Energy Generation Projects Supplying Electricity to Grid or Captive Consumers V3.0",
-      "GCCM001 - Methodology for Renewable Energy Generation Projects Supplying Electricity to Grid or Captive Consumers, version 4.0",
-      "GCCM001 “Methodology for Grid Connected Renewable Energy Generation Projects”, version 2.0.",
-      "GCCM001 Methodology for Renewable Energy Generation Projects Supplying Electricity to Grid or Captive Consumers (Version 3.0)",
-      "GCCM001 Version 2.0 /ACM0002 Version 20.0",
-      "GCCM001 (Version 3.0) and ACM0002 (Version 20.0)",
-      "GCCM001 Methodology for Renewable Energy Generation Projects Supplying Electricity to Grid or Captive Consumers, Ver 03.0",
-      "GCCM001 Methodology for Renewable Energy Generation Projects Supplying Electricity to Grid or Captive Consumers, version 3.0",
-      "GCCM001 “Methodology for Renewable Energy Generation Projects Supplying Electricity to Grid or Captive Consumers” -Version 3.0",
-      "GCCM001: Methodology for Renewable Energy Generation Projects Supplying Electricity to Grid or Captive Consumers",
-      "GCCM001 Methodology for Renewable Energy Generation Projects Supplying Electricity to Grid or Captive Consumers, V3.0",
-      "GCCM001 Methodology for Renewable Energy Generation Projects Supplying Electricity to Grid or Captive Consumers V4.0 - 2022",
-      "GCCM001 V3.0 - Methodology for Renewable Energy Generation Projects Supplying Electricity to Grid or Captive Consumers",
-      "GCCM001 - 3.0",
-      "GCCM001 Methodology for Renewable Energy Generation projects supplying Electricity to Grid or Captive Consumers Version 3.0",
-      "GCCM001 v2.0",
-      "GCCM001 Methodology for Renewable Energy Generation Projects Supplying Electricity to Grid or Captive Consumers version 4.0",
-      "GCCM001 Methodology for Renewable Energy Generation Projects Supplying Electricity to Grid or Captive Consumers (Version 4.0)",
-      "GCCM001 Methodology for Renewable Energy Generation Projects  Supplying Electricity to Grid or Captive Consumers , version 3.0",
-      "GCCM001 Methodology for Renewable Energy Generation Projects  Supplying Electricity to Grid or Captive Consumers , Ver 04.0",
-      "GCCM001 Methodology for Renewable Energy Generation Projects  Supplying Electricity to Grid or Captive Consumers , Version 4.0.",
-      "GCCM001 Methodology for Renewable Energy Generation Projects  Supplying Electricity to Grid or Captive Consumers , version 4.0"
-    ],
-    "program": "gcc"
-  },
-  "gccm002": {
-    "category": "energy-efficiency",
-    "known-strings": [
-      "GCCM002 v1.0 –Methodology for Energy Efficient Pumping Projects"
-    ],
-    "program": "gcc"
   },
   "gs-shipping": {
     "category": "energy-efficiency",
