--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -31,4 +31,5 @@ python:
   install:
     - method: pip
       path: .
-    - requirements: requirements-docs.txt
+      extra_requirements:
+        - docs
