--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 country_converter==1.0.0
-dask-expr>=1.0.1
-fastparquet>=2023.10
-fsspec>=2023.10
+dask==2023.9.3
+fastparquet==2023.10.0
+fsspec==2023.10.0
 intake-parquet>=0.3.0
 intake<2
 pandas==2.1.1
@@ -9,5 +9,5 @@ pandera==0.17
 pydantic==2.5.*
 pyjanitor==0.23.*
 requests>=2.31.0
-s3fs>=2023.9
+s3fs==2023.10.0
 universal_pathlib>=0.1.3
