--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,4 @@ pyjanitor==0.23.*
 requests>=2.31.0
 s3fs==2023.10.0
 universal_pathlib>=0.1.3
+numpy<2 # pin numpy to a version less than 2 until upstream dependencies are updated
