--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
 country_converter==1.0.0
-dask==2023.9.3
-fastparquet==2023.10.0
-fsspec==2023.10.0
+dask==2024.6.1
+fastparquet==2024.5.0
+fsspec==2024.6.1
 intake-parquet>=0.3.0
 intake<2
-pandas==2.1.1
-pandera==0.17
+pandas==2.2.2
+pandera==0.20
 pydantic==2.5.*
 pyjanitor==0.23.*
 requests>=2.31.0
-s3fs==2023.10.0
+s3fs==2024.6.1
 universal_pathlib>=0.1.3
-numpy<2 # pin numpy to a version less than 2 until upstream dependencies are updated
+numpy>=2
