--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,139 +1,136 @@
 [build-system]
-requires = ["setuptools>=64", "setuptools-scm[toml]>=6.2", "wheel"]
-build-backend = "setuptools.build_meta"
-
+    build-backend = "setuptools.build_meta"
+    requires      = ["setuptools-scm[toml]>=6.2", "setuptools>=64", "wheel"]
 
 [project]
-name = "offsets-db-data"
-description = "Monitoring the global carbon market"
-readme = "README.md"
-license = { text = "MIT" }
-authors = [{ name = "CarbonPlan", email = "tech@carbonplan.org" }]
-requires-python = ">=3.10"
-classifiers = [
-    "Development Status :: 4 - Beta",
-    "License :: OSI Approved :: MIT License",
-    "Operating System :: OS Independent",
-    "Intended Audience :: Science/Research",
-    "Programming Language :: Python",
-    "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python :: 3.11",
-    "Programming Language :: Python :: 3.12",
-    "Topic :: Scientific/Engineering",
-]
+    authors = [{ name = "CarbonPlan", email = "tech@carbonplan.org" }]
+    classifiers = [
+        "Development Status :: 4 - Beta",
+        "Intended Audience :: Science/Research",
+        "License :: OSI Approved :: MIT License",
+        "Operating System :: OS Independent",
+        "Programming Language :: Python :: 3",
+        "Programming Language :: Python :: 3.10",
+        "Programming Language :: Python :: 3.11",
+        "Programming Language :: Python :: 3.12",
+        "Programming Language :: Python",
+        "Topic :: Scientific/Engineering",
+    ]
+    description = "Monitoring the global carbon market"
+    license = { text = "MIT" }
+    name = "offsets-db-data"
+    readme = "README.md"
+    requires-python = ">=3.10"
 
+    dynamic = ["dependencies", "version"]
 
-dynamic = ["version", "dependencies"]
+[project.scripts]
+    offsets-db-data-orcli = "offsets_db_data.openrefine:main"
 
 [tool.setuptools.dynamic]
 
-dependencies = { file = ["requirements.txt"] }
-optional-dependencies = { dev = { file = ["requirements-dev.txt"] }, docs = { file = ["requirements-docs.txt"] } }
-
+    dependencies = { file = ["requirements.txt"] }
+    optional-dependencies = { dev = { file = [
+        "requirements-dev.txt",
+    ] }, docs = { file = [
+        "requirements-docs.txt",
+    ] } }
 
 [project.urls]
-repository = "https://github.com/carbonplan/offsets-db-data"
-"documentation" = "https://offsets-db-data.readthedocs.io/"
-"database web tool"= "https://carbonplan.org/research/offsets-db"
-"explainer" = "https://carbonplan.org/research/offsets-db-explainer"
+    "database web tool" = "https://carbonplan.org/research/offsets-db"
+    "documentation"     = "https://offsets-db-data.readthedocs.io/"
+    "explainer"         = "https://carbonplan.org/research/offsets-db-explainer"
+    repository          = "https://github.com/carbonplan/offsets-db-data"
 
 [tool.setuptools.packages.find]
-include = ["offsets_db_data*"]
+    include = ["offsets_db_data*"]
 
 [tool.setuptools.package-data]
-offsets_db_data = ["py.typed", "configs/*.json", "*.yaml"]
+    offsets_db_data = ["*.yaml", "configs/*.json", "py.typed"]
 
 [tool.setuptools_scm]
-version_scheme = "post-release"
-local_scheme = "node-and-date"
-fallback_version = "999"
-write_to = "offsets_db_data/_version.py"
-write_to_template = '__version__ = "{version}"'
+    fallback_version  = "999"
+    local_scheme      = "node-and-date"
+    version_scheme    = "post-release"
+    write_to          = "offsets_db_data/_version.py"
+    write_to_template = '__version__ = "{version}"'
 
 [tool.coverage.run]
-omit = ["tests/*"]
-branch = true
-
-
-
+    branch = true
+    omit   = ["tests/*"]
 
 [tool.ruff]
-line-length = 100
-target-version = "py310"
-extend-include = ["*.ipynb"]
+    extend-include = ["*.ipynb"]
+    line-length    = 100
+    target-version = "py310"
 
-
-builtins = ["ellipsis"]
-# Exclude a variety of commonly ignored directories.
-exclude = [
-    ".bzr",
-    ".direnv",
-    ".eggs",
-    ".git",
-    ".git-rewrite",
-    ".hg",
-    ".ipynb_checkpoints",
-    ".mypy_cache",
-    ".nox",
-    ".pants.d",
-    ".pyenv",
-    ".pytest_cache",
-    ".pytype",
-    ".ruff_cache",
-    ".svn",
-    ".tox",
-    ".venv",
-    ".vscode",
-    "__pypackages__",
-    "_build",
-    "buck-out",
-    "build",
-    "dist",
-    "node_modules",
-    "site-packages",
-    "venv",
-]
+    builtins = ["ellipsis"]
+    # Exclude a variety of commonly ignored directories.
+    exclude = [
+        ".bzr",
+        ".direnv",
+        ".eggs",
+        ".git",
+        ".git-rewrite",
+        ".hg",
+        ".ipynb_checkpoints",
+        ".mypy_cache",
+        ".nox",
+        ".pants.d",
+        ".pyenv",
+        ".pytest_cache",
+        ".pytype",
+        ".ruff_cache",
+        ".svn",
+        ".tox",
+        ".venv",
+        ".vscode",
+        "__pypackages__",
+        "_build",
+        "buck-out",
+        "build",
+        "dist",
+        "node_modules",
+        "site-packages",
+        "venv",
+    ]
 [tool.ruff.lint]
-per-file-ignores = {}
-ignore = [
-    "E721", # Comparing types instead of isinstance
-    "E741", # Ambiguous variable names
-    "E501", # Conflicts with ruff format
-]
-select = [
-    # Pyflakes
-    "F",
-    # Pycodestyle
-    "E",
-    "W",
-    # isort
-    "I",
-    # Pyupgrade
-    "UP",
-]
-
-
+    ignore = [
+        "E501", # Conflicts with ruff format
+        "E721", # Comparing types instead of isinstance
+        "E741", # Ambiguous variable names
+    ]
+    per-file-ignores = {}
+    select = [
+        # Pyflakes
+        "F",
+        # Pycodestyle
+        "E",
+        "W",
+        # isort
+        "I",
+        # Pyupgrade
+        "UP",
+    ]
 
 [tool.ruff.lint.mccabe]
-max-complexity = 18
+    max-complexity = 18
 
 [tool.ruff.lint.isort]
-known-first-party = ["offsets_db_data"]
-combine-as-imports = true
+    combine-as-imports = true
+    known-first-party  = ["offsets_db_data"]
 
 [tool.ruff.format]
-quote-style = "single"
-docstring-code-format = true
+    docstring-code-format = true
+    quote-style           = "single"
 
 [tool.ruff.lint.pydocstyle]
-convention = "numpy"
+    convention = "numpy"
 
 [tool.ruff.lint.pyupgrade]
-# Preserve types, even if a file imports `from __future__ import annotations`.
-keep-runtime-typing = true
-
+    # Preserve types, even if a file imports `from __future__ import annotations`.
+    keep-runtime-typing = true
 
 [tool.pytest.ini_options]
-console_output_style = "count"
-addopts = "-n auto --cov=./ --cov-report=xml  --cov-report=term-missing --verbose"
+    addopts              = "-n auto --cov=./ --cov-report=xml  --cov-report=term-missing --verbose"
+    console_output_style = "count"
