Integrate openrefine with existing ETL pipelines (#102)
* Add orcli installation and execution commands with Typer integration

* Enhance orcli installation command to support custom download URL and improve file handling

* Improve CI workflow and enhance orcli installation process

* Refactor CI workflow for improved readability and streamline CLI installation commands

* Refactor CI workflow configuration for consistency and clarity

* Refactor orcli installation process to use a temporary file and improve destination handling

* Enhance error handling in orcli installation process and fix command syntax

* Fix command syntax in CI workflow for orcli installation

* Update default destination path and improve tempfile handling in orcli installation

--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -23,7 +23,7 @@ env:
   AWS_DEFAULT_REGION: us-west-2
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     timeout-minutes: 120
     defaults:
@@ -55,6 +55,11 @@ jobs:
       - name: List packages
         run: |
           python -m pip list
+
+      - name: Install CLI
+        run: |
+          offsets-db-data-orcli install --destination /usr/local/bin
+          offsets-db-data-orcli --help
 
       - name: Run tests
         run: |
