--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -29,6 +29,12 @@ jobs:
     defaults:
       run:
         shell: bash -l {0}
+    services:
+      openrefine:
+        image: abesesr/openrefine:3.8.7
+        ports:
+          - 3333:3333
+        options: --name openrefine
     steps:
       - uses: actions/checkout@v4
       - name: configure aws credentials
@@ -63,4 +69,4 @@ jobs:
 
       - name: Run tests
         run: |
-          python -m pytest
+          python -m pytest -s
